@@ -446,6 +446,8 @@ class Connection(ExportImport, object):
                     del self._cache[oid]
                 del obj._p_jar
                 del obj._p_oid
+                if obj._p_changed:
+                    obj._p_changed = False
                 self._db.save_oid(oid)
             else:
 
@@ -736,6 +738,8 @@ class Connection(ExportImport, object):
         self._invalidate_creating()
         while self._added:
             oid, obj = self._added.popitem()
+            if obj._p_changed:
+                obj._p_changed = False
             del obj._p_oid
             del obj._p_jar
         self._tpc_cleanup()
@@ -750,6 +754,8 @@ class Connection(ExportImport, object):
             o = self._cache.get(oid)
             if o is not None:
                 del self._cache[oid]
+                if o._p_changed:
+                    o._p_changed = False
                 del o._p_jar
                 del o._p_oid
 
